--- a/Restaurant.API/appsettings.json
+++ b/Restaurant.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=IDEAPAD-5-PRO\\SQLEXPRESS;Database=Restaurant;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
