--- a/Restaurant.API/appsettings.json
+++ b/Restaurant.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IDEAPAD-5-PRO\\SQLEXPRESS;Database=Restaurant_Test;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=IDEAPAD-5-PRO\\SQLEXPRESS;Database=Restaurant;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
